[metadata]
name = yadage
version = 0.20.2
description = yadage - YAML based adage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yadage/yadage
author = Lukas Heinrich
author_email = lukas.heinrich@cern.ch
license = MIT
license_file = LICENSE
keywords = physics yadage
project_urls =
    Documentation = https://github.com/yadage/yadage
    Source Code = https://github.com/yadage/yadage
    Issue Tracker = https://github.com/yadage/yadage/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    adage>=0.10.2  # Ensure networkx>=2.4
    packtivity>=0.16.2  # Handle jqlang v1.6/v1.7
    yadage-schemas>=0.10.0
    click>=7.0
    psutil
    requests[security]>=2.9
    pyyaml
    jsonref
    jsonschema
    jsonpointer>=1.10
    jsonpath_rw
    checksumdir
    glob2
    jq  # versions controlled through packtivity

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    yadage-run = yadage.steering:main
    yadage-manual = yadage.manualcli:mancli
    yadage-util = yadage.utilcli:utilcli
